--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           <h1>JAP CRUD</h1>
         </div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-6">
@@ -60,7 +60,7 @@
               </div>
             </div>
           </div>
-          <div class="rows">
+          <div class="row">
             <div class="col">
               <div class="border p-3 my-3 position-relative" id="put-box">
                 <h6>Modificar registro</h6>
@@ -99,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-md-6">
           <ul
             class="border bg-dark text-white my-3 list-group list-group-flush"
             id="results"
